Revert "qr code"
This reverts commit 9eea584b8042f9986c8caefdcf736f02b2f57dc6.